--- a/index.html
+++ b/index.html
@@ -15,15 +15,26 @@
 </head>
 <body>
 
+
 	<header>
 		<h1>Home</h1>
 	</header>
 	<nav>
 		<p><a href="index.html">Home</a></p>
 		<p><a href="inloggad.html">Inloggad</a></p>
-		<p><a href="contact.html">Kontakt</a></p>
+    <p><a href="contact.html">Kontakt</a></p>
+    
+  </nav>
+  <form class="login">
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button>Login</button>
+  </form>
+  
+  <a href="https://codepen.io/davinci/" target="_blank">check my other pens</a>
 
-	</nav>
+
+
 	<footer></footer>
 
 </body>
