--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -16,14 +18,70 @@
 <body>
 
 	<header>
-		<h1>Kontakt</h1>
-	</header>
-	<nav>
-		<p><a href="index.html">Home</a></p>
-		<p><a href="inloggad.html">Inloggad</a></p>
-		<p><a href="contact.html">Kontakt</a></p>
+  <!-- Options -->
+<!--div id="nav-colors">
+	Navbar
+	<button id="pink" class="btn"></button>
+	<button id="red" class="btn"></button>
+	<button id="purple" class="btn"></button>
+	<button id="blue" class="btn"></button>
+	<button id="green" class="btn"></button>
+	<button id="yellow" class="btn"></button>
+	<button id="orange" class="btn"></button>
+</div>-->
+<!--div id="font-colors">
+	Font
+	<button id="white" class="btn"></button>
+	<button id="black" class="btn"></button>
+</div>
+<div id="edges">
+	Edges
+	<button id="rounded" class="btn">Rounded</button>
+	<button id="square" class="btn">Square</button>
+</div>
+<h1>Minimal Bootstrap Navbar</h1>-->
 
-	</nav>
+<nav class="navbar">
+	<div class="container-fluid">
+		<!-- Nav Header -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#"><span class="fa fa-home"></span><span class="link"> 318</span></a>
+		</div>
+		<!-- Nav Collapse -->
+		<div class="navbar-collapse collapse" id="collapse-1">
+			<!-- Nav Left -->
+			<ul class="nav navbar-nav">
+				<!-- Products -->
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						<span class="fa fa-tags"></span><span class="link"> Products</span> <span class="fa fa-caret-down"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#"><span class="fa fa-tag"></span> Catalogue 1</a></li>
+						<li><a href="#"><span class="fa fa-tag"></span> Catalogue 2</a></li>
+					</ul>
+				</li>
+				<!-- About -->
+				<li><a href="#"><span class="fa fa-info-circle"></span><span class="link"> Om</span></a></li>
+				<!-- Contact -->
+				<li><a href="#"><span class="fa fa-phone"></span><span class="link"> Kontakt</span></a></li>
+			</ul>
+			<!-- Nav Right -->
+			<form class="navbar-form navbar-right">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="Sök">
+				</div>
+				<button type="submit" class="btn"><span class="fa fa-search"></span></button>
+			</form>
+		</div>
+	</div>
+</nav>
+</header>
+
 	<footer></footer>
 
 </body>
