--- a/index.html
+++ b/index.html
@@ -30,17 +30,11 @@
 <div class="mainContainer animated flipInX" id="mainFrame">
 	<div class="innerContainer">
     	<form>
-        	<input id="submitField" type="text" class="inputBox" placeholder="Type your login here" autofocus="autofocus" /> 
-        	<input type="reset" value="" id="deleteButton"/>
+        	<input id="submitField" type="text" class="inputBox" placeholder="Användarnamn" autofocus="autofocus" /> 
+        	<input id="submitField" type="text" class="inputBox" placeholder="Lösenord" autofocus="autofocus" /> 
+			<input type="reset" value="" id="deleteButton"/>
         </form>
-        <span class="submitButton"> Submit </span>
+        <span class="submitButton"> Logga in </span>
     </div>
 </div>
 
-
-
-
-	<footer></footer>
-
-</body>
-</html>
