--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><span class="fa fa-home"></span><span class="link"> 318</span></a>
+			<a class="navbar-brand" href="index.html"><span class="fa fa-home"></span><span class="link"> 418: I'm a teapot</span></a>
 		</div>
 		<!-- Nav Collapse -->
 		<div class="navbar-collapse collapse" id="collapse-1">
@@ -68,7 +68,7 @@
 				<!-- About -->
 				<li><a href="#"><span class="fa fa-info-circle"></span><span class="link"> Om</span></a></li>
 				<!-- Contact -->
-				<li><a href="#"><span class="fa fa-phone"></span><span class="link"> Kontakt</span></a></li>
+				<li><a href="contact.html"><span class="fa fa-phone"></span><span class="link"> Kontakt</span></a></li>
 			</ul>
 			<!-- Nav Right -->
 			<form class="navbar-form navbar-right">
@@ -82,7 +82,7 @@
 </nav>
 </header>
 
-	<footer></footer>
+<footer></footer>
 
 </body>
 </html>
