--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link rel="icon" type="image/png" sizes="16x16" href="teapot.png">  
+<link rel="icon" type="image/png" sizes="16x16" href="tea-time.png">  
 </head>
 <body>
 
