--- a/contact.html
+++ b/contact.html
@@ -2,180 +2,381 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"> 
   <title>418 I'm a teapot</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="nav.css">
-  <link rel="stylesheet" href="nav2.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+  <meta name="description" content="x">
+  <meta name="author" content="Johanna Erlandsson">
+  <link rel="icon" type="image/png" sizes="16x16" href="teapot.png"> 
+ 
+  
+
+<!-- mdboostrap-->
+
+<title>Material Design for Bootstrap</title>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Google Fonts Roboto -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<!-- Material Design Bootstrap -->
+<link rel="stylesheet" href="css/mdb.min.css">
+ <!-- My CSS -->
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="css/style.css">
+<!--style>
+  body {
+    background-color: #2e2e2e;
+  }
+  .text-poppy-red {
+    color: #ef5350 !important;
+  }
+  .btn-poppy-red {
+    background-color: #ef5350 !important;
+  }
+  .bg-poppy-red {
+    background-color: #ef5350 !important;
+  }
+</style-->
+
 </head>
 <body>
-
-	<header>
-  <!-- Options -->
-<!--div id="nav-colors">
-	Navbar
-	<button id="pink" class="btn"></button>
-	<button id="red" class="btn"></button>
-	<button id="purple" class="btn"></button>
-	<button id="blue" class="btn"></button>
-	<button id="green" class="btn"></button>
-	<button id="yellow" class="btn"></button>
-	<button id="orange" class="btn"></button>
-</div>-->
-<!--div id="font-colors">
-	Font
-	<button id="white" class="btn"></button>
-	<button id="black" class="btn"></button>
-</div>
-<div id="edges">
-	Edges
-	<button id="rounded" class="btn">Rounded</button>
-	<button id="square" class="btn">Square</button>
-</div>
-<h1>Minimal Bootstrap Navbar</h1>-->
-
-<nav class="navbar">
-	<div class="container-fluid">
-		<!-- Nav Header -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html"><span class="fa fa-home"></span><span class="link"> 418: I'm a teapot</span></a>
-		</div>
-		<!-- Nav Collapse -->
-		<div class="navbar-collapse collapse" id="collapse-1">
-			<!-- Nav Left -->
-			<ul class="nav navbar-nav">
-				<!-- Products -->
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-						<span class="fa fa-tags"></span><span class="link"> Products</span> <span class="fa fa-caret-down"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#"><span class="fa fa-tag"></span> Catalogue 1</a></li>
-						<li><a href="#"><span class="fa fa-tag"></span> Catalogue 2</a></li>
-					</ul>
-				</li>
-				<!-- About -->
-				<li><a href="#"><span class="fa fa-info-circle"></span><span class="link"> Om</span></a></li>
-				<!-- Contact -->
-				<li><a href="contact.html"><span class="fa fa-phone"></span><span class="link"> Kontakt</span></a></li>
-			</ul>
-			<!-- Nav Right -->
-			<form class="navbar-form navbar-right">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Sök">
-				</div>
-				<button type="submit" class="btn"><span class="fa fa-search"></span></button>
-			</form>
-		</div>
-	</div>
-</nav>
-</header>
-<div>
-  "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam 
-  voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
-  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci 
-  velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. 
-  Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex 
-  ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae 
-  consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
-</div>
-
-<footer><div class="container">
-  <nav>
-      <ul class="mcd-menu">
-        <li>
-          <a href="">
-            <i class="fa fa-home"></i>
-            <strong>Home</strong>
-            <small>sweet home</small>
+  <!--Main Navigation-->
+  <header>
+  <!--Navbar -->
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
+    <a class="navbar-brand" href="#">418: I'm a teapot</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="inloggad.html" title="Hem"><i class="fas fa-home"></i>Hem
+            <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li>
-          <a href="" class="active">
-            <i class="fa fa-edit"></i>
-            <strong>About us</strong>
-            <small>sweet home</small>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa fa-gift"></i>
-            <strong>Features</strong>
-            <small>sweet home</small>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa fa-globe"></i>
-            <strong>News</strong>
-            <small>sweet home</small>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa fa-comments-o"></i>
-            <strong>Blog</strong>
-            <small>what they say</small>
-          </a>
-          <ul>
-            <li><a href="#"><i class="fa fa-globe"></i>Mission</a></li>
-            <li>
-              <a href="#"><i class="fa fa-group"></i>Our Team</a>
-              <ul>
-                <li><a href="#"><i class="fa fa-female"></i>Leyla Sparks</a></li>
-                <li>
-                  <a href="#"><i class="fa fa-male"></i>Gleb Ismailov</a>
-                  <ul>
-                    <li><a href="#"><i class="fa fa-leaf"></i>About</a></li>
-                    <li><a href="#"><i class="fa fa-tasks"></i>Skills</a></li>
-                  </ul>
-                </li>
-                <li><a href="#"><i class="fa fa-female"></i>Viktoria Gibbers</a></li>
-              </ul>
-            </li>
-            <li><a href="#"><i class="fa fa-trophy"></i>Rewards</a></li>
-            <li><a href="#"><i class="fa fa-certificate"></i>Certificates</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa fa-picture-o"></i>
-            <strong>Portfolio</strong>
-            <small>sweet home</small>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <i class="fa fa-envelope-o"></i>
-            <strong>Contacts</strong>
-            <small>drop a line</small>
-          </a>
-        </li>
-        <li class="float">
-          <a class="search">
-            <input type="text" value="search ...">
-            <button><i class="fa fa-search"></i></button>
-          </a>
-          <a href="" class="search-mobile">
-            <i class="fa fa-search"></i>
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html" title="Kontakt"><i class="far fa-envelope"></i>Kontakt</a>
         </li>
       </ul>
+      <ul class="navbar-nav ml-auto nav-flex-icons">
+        <li class="nav-item dropdown" title="Min profil">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right dropdown-default"
+          aria-labelledby="navbarDropdownMenuLink-333">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="index.html">Logga ut</a>
+          </div>
+        </li>
+      </ul>
+    </div>
     </nav>
-  </div></footer>
+<!--/.Navbar -->
+  </header>
+  <!--Main Navigation-->
+  
+  <!--Main layout-->
+  <main>
+  
+  <!-- Material form contact -->
+<div class="card">
 
-</body>
+  <h5 class="card-header info-color white-text text-center py-4">
+      <strong>Contact us</strong>
+  </h5>
+
+  <!--Card content-->
+  <div class="card-body px-lg-5 pt-0">
+
+      <!-- Form -->
+      <form class="text-center" style="color: #757575;" action="#!">
+
+          <!-- Name -->
+          <div class="md-form mt-3">
+              <input type="text" id="materialContactFormName" class="form-control">
+              <label for="materialContactFormName">Name</label>
+          </div>
+
+          <!-- E-mail -->
+          <div class="md-form">
+              <input type="email" id="materialContactFormEmail" class="form-control">
+              <label for="materialContactFormEmail">E-mail</label>
+          </div>
+
+          <!-- Subject -->
+          <span>Subject</span>
+          <select class="mdb-select">
+              <option value="" disabled>Choose option</option>
+              <option value="1" selected>Feedback</option>
+              <option value="2">Report a bug</option>
+              <option value="3">Feature request</option>
+              <option value="4">Feature request</option>
+          </select>
+
+          <!--Message-->
+          <div class="md-form">
+              <textarea id="materialContactFormMessage" class="form-control md-textarea" rows="3"></textarea>
+              <label for="materialContactFormMessage">Message</label>
+          </div>
+
+          <!-- Copy -->
+          <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialContactFormCopy">
+              <label class="form-check-label" for="materialContactFormCopy">Send me a copy of this message</label>
+          </div>
+
+          <!-- Send button -->
+          <button class="btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Send</button>
+
+      </form>
+      <!-- Form -->
+
+  </div>
+</main>
+
+
+<div style="height: 50px;"></div>
+
+<main>
+<!-- Section: Contact v.1 -->
+<section class="my-5">
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
+  <!-- Section description -->
+  <p class="text-center w-responsive mx-auto pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+    eum porro a pariatur veniam.</p>
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5 mb-lg-0 mb-4">
+
+      <!-- Form with header -->
+      <div class="card2">
+        <div class="card-body">
+          <!-- Header -->
+          <div class="form-header blue accent-1">
+            <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
+          </div>
+          <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
+          <!-- Body -->
+          <div class="md-form">
+            <i class="fas fa-user prefix grey-text"></i>
+            <input type="text" id="form-name" class="form-control">
+            <label for="form-name">Your name</label>
+          </div>
+          <div class="md-form">
+            <i class="fas fa-envelope prefix grey-text"></i>
+            <input type="text" id="form-email" class="form-control">
+            <label for="form-email">Your email</label>
+          </div>
+          <div class="md-form">
+            <i class="fas fa-tag prefix grey-text"></i>
+            <input type="text" id="form-Subject" class="form-control">
+            <label for="form-Subject">Subject</label>
+          </div>
+          <div class="md-form">
+            <i class="fas fa-pencil-alt prefix grey-text"></i>
+            <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+            <label for="form-text">Send message</label>
+          </div>
+          <div class="text-center">
+            <button class="btn btn-light-blue">Submit</button>
+          </div>
+        </div>
+      </div>
+      <!-- Form with header -->
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-7">
+
+      <!--Google map-->
+      <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
+        <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
+          style="border:0" allowfullscreen></iframe>
+      </div>
+      <!-- Buttons-->
+      <div class="row text-center">
+        <div class="col-md-4">
+          <a class="btn-floating blue accent-1">
+            <i class="fas fa-map-marker-alt"></i>
+          </a>
+          <p>New York, 94126</p>
+          <p class="mb-md-0">United States</p>
+        </div>
+        <div class="col-md-4">
+          <a class="btn-floating blue accent-1">
+            <i class="fas fa-phone"></i>
+          </a>
+          <p>+ 01 234 567 89</p>
+          <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
+        </div>
+        <div class="col-md-4">
+          <a class="btn-floating blue accent-1">
+            <i class="fas fa-envelope"></i>
+          </a>
+          <p>info@gmail.com</p>
+          <p class="mb-0">sale@gmail.com</p>
+        </div>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</section>
+<!-- Section: Contact v.1 -->
+</main>
+
+<div style="height: 50px;"></div>
+
+<main>
+<!-- Section: Contact v.2 -->
+<section class="my-card">
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
+  <!-- Section description -->
+  <p class="text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
+    eum porro a pariatur veniam.</p>
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-md-9 mb-md-0 mb-5">
+
+      <form>
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-6">
+            <div class="md-form mb-0">
+              <input type="text" id="contact-name" class="form-control">
+              <label for="contact-name" class="">Your name</label>
+            </div>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-6">
+            <div class="md-form mb-0">
+              <input type="text" id="contact-email" class="form-control">
+              <label for="contact-email" class="">Your email</label>
+            </div>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-12">
+            <div class="md-form mb-0">
+              <input type="text" id="contact-Subject" class="form-control">
+              <label for="contact-Subject" class="">Subject</label>
+            </div>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-12">
+            <div class="md-form">
+              <textarea id="contact-message" class="form-control md-textarea" rows="3"></textarea>
+              <label for="contact-message">Your message</label>
+            </div>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </form>
+
+      <div class="text-center text-md-left">
+        <a class="btn btn-primary btn-md">Send</a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-3 text-center">
+      <ul class="list-unstyled mb-0">
+        <li>
+          <i class="fas fa-map-marker-alt fa-2x blue-text"></i>
+          <p>San Francisco, CA 94126, USA</p>
+        </li>
+        <li>
+          <i class="fas fa-phone fa-2x mt-4 blue-text"></i>
+          <p>+ 01 234 567 89</p>
+        </li>
+        <li>
+          <i class="fas fa-envelope fa-2x mt-4 blue-text"></i>
+          <p class="mb-0">contact@example.com</p>
+        </li>
+      </ul>
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</section>
+<!-- Section: Contact v.2 -->
+</main>
+
+<div style="height: 50px;"></div>
+
+  
+  
+  <!--Footer-->
+  <footer>
+  
+  </footer>
+  <!--Footer-->
+    <!-- End your project here-->
+  
+    <!-- jQuery -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- Your custom scripts (optional) -->
+    <script type="text/javascript"></script>
+  
+  </body>
 </html>
