--- a/contact.html
+++ b/contact.html
@@ -28,20 +28,6 @@
  <!-- My CSS -->
 <link rel="stylesheet" href="main.css">
 <link rel="stylesheet" href="css/style.css">
-<!--style>
-  body {
-    background-color: #2e2e2e;
-  }
-  .text-poppy-red {
-    color: #ef5350 !important;
-  }
-  .btn-poppy-red {
-    background-color: #ef5350 !important;
-  }
-  .bg-poppy-red {
-    background-color: #ef5350 !important;
-  }
-</style-->
 
 </head>
 <body>
@@ -84,253 +70,148 @@
 <!--/.Navbar -->
   </header>
   <!--Main Navigation-->
-  
-  <!--Main layout-->
   <main>
-  
-  <!-- Material form contact -->
-<div class="card">
+  <!-- Section: Contact v.1 -->
+    <section class="my-5">
 
-  <h5 class="card-header info-color white-text text-center py-4">
-      <strong>Contact us</strong>
-  </h5>
+    <!-- Section heading -->
+    <h2 class="h1-responsive font-weight-bold text-center my-5">Kontakta oss</h2>
+    <!-- Section description -->
+    <p class="text-center w-responsive mx-auto pb-5">För att kunna hjälpa dig på bästa sätt 
+    behöver vi en tydlig beskrivning av vad du behöver hjälp med.</p>
 
-  <!--Card content-->
-  <div class="card-body px-lg-5 pt-0">
+    <!-- Grid row -->
+    <div class="row">
 
-      <!-- Form -->
-      <form class="text-center" style="color: #757575;" action="#!">
-
-          <!-- Name -->
-          <div class="md-form mt-3">
-              <input type="text" id="materialContactFormName" class="form-control">
-              <label for="materialContactFormName">Name</label>
-          </div>
-
-          <!-- E-mail -->
-          <div class="md-form">
-              <input type="email" id="materialContactFormEmail" class="form-control">
-              <label for="materialContactFormEmail">E-mail</label>
-          </div>
-
-          <!-- Subject -->
-          <span>Subject</span>
-          <select class="mdb-select">
-              <option value="" disabled>Choose option</option>
-              <option value="1" selected>Feedback</option>
-              <option value="2">Report a bug</option>
-              <option value="3">Feature request</option>
-              <option value="4">Feature request</option>
-          </select>
-
-          <!--Message-->
-          <div class="md-form">
-              <textarea id="materialContactFormMessage" class="form-control md-textarea" rows="3"></textarea>
-              <label for="materialContactFormMessage">Message</label>
-          </div>
-
-          <!-- Copy -->
-          <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="materialContactFormCopy">
-              <label class="form-check-label" for="materialContactFormCopy">Send me a copy of this message</label>
-          </div>
-
-          <!-- Send button -->
-          <button class="btn btn-outline-info btn-rounded btn-block z-depth-0 my-4 waves-effect" type="submit">Send</button>
-
-      </form>
-      <!-- Form -->
-
-  </div>
-</main>
-
-
-<div style="height: 50px;"></div>
-
-<main>
-<!-- Section: Contact v.1 -->
-<section class="my-5">
-
-  <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
-  <!-- Section description -->
-  <p class="text-center w-responsive mx-auto pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-    eum porro a pariatur veniam.</p>
-
-  <!-- Grid row -->
-  <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-lg-5 mb-lg-0 mb-4">
-
-      <!-- Form with header -->
-      <div class="card2">
-        <div class="card-body">
-          <!-- Header -->
-          <div class="form-header blue accent-1">
-            <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
-          </div>
-          <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
-          <!-- Body -->
-          <div class="md-form">
-            <i class="fas fa-user prefix grey-text"></i>
-            <input type="text" id="form-name" class="form-control">
-            <label for="form-name">Your name</label>
-          </div>
-          <div class="md-form">
-            <i class="fas fa-envelope prefix grey-text"></i>
-            <input type="text" id="form-email" class="form-control">
-            <label for="form-email">Your email</label>
-          </div>
-          <div class="md-form">
-            <i class="fas fa-tag prefix grey-text"></i>
-            <input type="text" id="form-Subject" class="form-control">
-            <label for="form-Subject">Subject</label>
-          </div>
-          <div class="md-form">
-            <i class="fas fa-pencil-alt prefix grey-text"></i>
-            <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
-            <label for="form-text">Send message</label>
-          </div>
-          <div class="text-center">
-            <button class="btn btn-light-blue">Submit</button>
+      <!-- Grid column -->
+      <div class="col-lg-5 mb-lg-0 mb-4">
+        <!-- Form with header -->
+        <div class="card">
+          <div class="card-body">
+            <!-- Header -->
+            <div class="form-header blue accent-1">
+              <h3 class="mt-2"><i class="fas fa-envelope"></i> Mejla oss:</h3>
+            </div>
+            <p class="dark-grey-text">Vänligen beskriv vad du vill ha hjälp med.</p>
+            <!-- Body -->
+            <div class="md-form">
+              <i class="fas fa-user prefix grey-text"></i>
+              <input type="text" id="form-name" class="form-control">
+              <label for="form-name">Ditt namn</label>
+            </div>
+            <div class="md-form">
+              <i class="fas fa-envelope prefix grey-text"></i>
+              <input type="text" id="form-email" class="form-control">
+              <label for="form-email">Din mejladress</label>
+            </div>
+            <div class="md-form">
+              <i class="fas fa-tag prefix grey-text"></i>
+              <input type="text" id="form-Subject" class="form-control">
+              <label for="form-Subject">Ämne</label>
+            </div>
+            <div class="md-form">
+              <i class="fas fa-pencil-alt prefix grey-text"></i>
+              <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+              <label for="form-text">Beskriv ditt ärende</label>
+            </div>
+            <div class="text-center">
+              <button class="btn btn-light-blue">Skicka</button>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- Form with header -->
+        <!-- Form with header -->
 
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-lg-7">
+
+        <!--Google map-->
+        <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
+          <!--iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
+          style="border:0" allowfullscreen></iframe-->
+          <!--iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48376.39501495109!2d12.5657723660058!3d55.647844411024685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465305a574c491ff%3A0xd3a905dfbd4888e5!2zTWFsbcO2!5e0!3m2!1ssv!2sse!4v1606817657756!5m2!1ssv!2sse" 
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe-->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4501.836020684566!2d12.998178504210436!3d55.609899442023014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a3fbe478e801%3A0xb97fde100fa8935c!2sMalm%C3%B6%20centralstation%2C%20211%2020%20Malm%C3%B6!5e0!3m2!1ssv!2sse!4v1606817786227!5m2!1ssv!2sse" 
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <!-- Buttons-->
+        <div class="row text-center">
+        <div class="col-md-4">
+          <!--a class="btn-floating blue accent-1"-->
+          <i class="fas fa-map-marker-alt"></i>
+          </a>
+          <p>Malmö, 211 20</p>
+          <p class="mb-md-0">Sverige</p>
+        </div>
+        <div class="col-md-4">
+          <!--a class="btn-floating blue accent-1"-->
+          <i class="fas fa-phone"></i>
+          </a>
+          <p>012 345 67 89</p>
+          <p class="mb-md-0">Mån - Fre, 8:00-18:00</p>
+        </div>
+        <div class="col-md-4">
+          <!--<a class="btn-floating blue accent-1"-->
+          <i class="far fa-envelope"></i>
+          </a>
+          <p>info@test.com</p>
+        </div>
+      </div>
     </div>
     <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-lg-7">
-
-      <!--Google map-->
-      <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
-        <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
-          style="border:0" allowfullscreen></iframe>
-      </div>
-      <!-- Buttons-->
-      <div class="row text-center">
-        <div class="col-md-4">
-          <a class="btn-floating blue accent-1">
-            <i class="fas fa-map-marker-alt"></i>
-          </a>
-          <p>New York, 94126</p>
-          <p class="mb-md-0">United States</p>
-        </div>
-        <div class="col-md-4">
-          <a class="btn-floating blue accent-1">
-            <i class="fas fa-phone"></i>
-          </a>
-          <p>+ 01 234 567 89</p>
-          <p class="mb-md-0">Mon - Fri, 8:00-22:00</p>
-        </div>
-        <div class="col-md-4">
-          <a class="btn-floating blue accent-1">
-            <i class="fas fa-envelope"></i>
-          </a>
-          <p>info@gmail.com</p>
-          <p class="mb-0">sale@gmail.com</p>
-        </div>
-      </div>
-
-    </div>
-    <!-- Grid column -->
-
   </div>
   <!-- Grid row -->
-
 </section>
 <!-- Section: Contact v.1 -->
 </main>
 
-<div style="height: 50px;"></div>
-
+<!--
 <main>
-<!-- Section: Contact v.2 -->
 <section class="my-card">
-
-  <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
-  <!-- Section description -->
   <p class="text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
     eum porro a pariatur veniam.</p>
-
-  <!-- Grid row -->
   <div class="row">
-
-    <!-- Grid column -->
     <div class="col-md-9 mb-md-0 mb-5">
-
       <form>
-
-        <!-- Grid row -->
         <div class="row">
-
-          <!-- Grid column -->
           <div class="col-md-6">
             <div class="md-form mb-0">
               <input type="text" id="contact-name" class="form-control">
               <label for="contact-name" class="">Your name</label>
             </div>
           </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
           <div class="col-md-6">
             <div class="md-form mb-0">
               <input type="text" id="contact-email" class="form-control">
               <label for="contact-email" class="">Your email</label>
             </div>
           </div>
-          <!-- Grid column -->
-
         </div>
-        <!-- Grid row -->
-
-        <!-- Grid row -->
         <div class="row">
-
-          <!-- Grid column -->
           <div class="col-md-12">
             <div class="md-form mb-0">
               <input type="text" id="contact-Subject" class="form-control">
               <label for="contact-Subject" class="">Subject</label>
             </div>
           </div>
-          <!-- Grid column -->
-
         </div>
-        <!-- Grid row -->
-
-        <!-- Grid row -->
         <div class="row">
-
-          <!-- Grid column -->
           <div class="col-md-12">
             <div class="md-form">
               <textarea id="contact-message" class="form-control md-textarea" rows="3"></textarea>
               <label for="contact-message">Your message</label>
             </div>
           </div>
-          <!-- Grid column -->
-
         </div>
-        <!-- Grid row -->
-
       </form>
-
       <div class="text-center text-md-left">
         <a class="btn btn-primary btn-md">Send</a>
       </div>
-
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
     <div class="col-md-3 text-center">
       <ul class="list-unstyled mb-0">
         <li>
@@ -347,14 +228,10 @@
         </li>
       </ul>
     </div>
-    <!-- Grid column -->
-
   </div>
-  <!-- Grid row -->
-
 </section>
-<!-- Section: Contact v.2 -->
 </main>
+-->
 
 <div style="height: 50px;"></div>
 
